# jit-setup

./: .gitignore  LICENSE  README.md  README_CN.md  pyproject.toml
src/jit_setup/: __init__.py  cli.py  config.py  llm.py  loop.py  scanner.py  tools.py  ui.py
worker/: wrangler.toml
worker/src/: index.js
